--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,7 @@ jobs:
         path: |
           C:\vcpkg\installed
           C:\vcpkg\packages
-        key: vcpkg-${{ runner.os }}-${{ hashFiles('**/CMakeLists.txt') }}
-        restore-keys: |
-          vcpkg-${{ runner.os }}-
+        key: vcpkg-${{ runner.os }}
 
     - name: Dependencies
       run: |
@@ -38,7 +36,7 @@ jobs:
       run: |
         cmake --version
         cmake -B build -S . `
-          -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" `
+          -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" `
           -DCONTINUOUS_INTEGRATION=1
 
     - name: Build
