--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Dependencies
       run: |
-        vcpkg install boost-iostreams boost-filesystem boost-program-options boost-date-time boost-system liblzma
+        vcpkg install boost liblzma
 
     - name: Configure
       shell: pwsh
